@@ -319,6 +319,9 @@ Release 2.8.0 - UNRELEASED
 
     YARN-3521. Support return structured NodeLabel objects in REST API (Sunil G via wangda)
 
+    YARN-3362. Add node label usage in RM CapacityScheduler web UI.
+    (Naganarasimha G R via wangda)
+
   OPTIMIZATIONS
 
     YARN-3339. TestDockerContainerExecutor should pull a single image and not
